cka-exercises/deny-all-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-network
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
