cka-exercises/network-policy-from-specific-namespace-and-specific-pod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-pod-c
spec:
  podSelector:
    matchLabels:
      run: pod-c
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: full-pod-a
      namespaceSelector:
        matchLabels:
          access: liberado
    ports:
    - protocol: TCP
      port: 80
