cka-exercises/network-policy-from-specific-pod-or-namespace-and-ipblock.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-pod-c
spec:
  podSelector:
    matchLabels:
      run: pod-c
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: pod-a
    - namespaceSelector:
        matchLabels:
          acess: liberado
    - ipBlock:
        cidr: 10.0.0.0/8
    ports:
    - protocol: TCP
      port: 80
